# mk-test

./: CMakeLists.txt  README.md  STM32L011K4Tx_FLASH.ld
include/: commands.h  uart.h
src/: commands.c  main.c  uart.c
startup/: startup_stm32l011xx.s
